# chat-excel

./: .dockerignore  .env  .env.docker  00-北办昇腾生态伙伴作战地图-AI助手参考.xlsm  DEPLOY.md  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  pyproject.toml  test_data.xlsx  test_data2.csv  ~$test_data.xlsx
backend/: .env  main.py  migrate_db.py  requirements.txt
backend/services/: chat_history_service.py  database.py  llm_service.py  redis_service.py
docs/: 功能文档.md
src/: App.tsx  styles.css
src/components/: ChatInput.tsx  ChatMessageList.tsx  FileChip.tsx  SheetSelector.tsx  Sidebar.tsx  TopNav.tsx  UploadControls.tsx
src/pages/: GeneratePage.tsx  HistoryPage.tsx  HomePage.tsx  SessionPage.tsx
src/services/: api.ts
