[project]
name = "chat-excel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.2.0",
    "cryptography>=42.0.0",
    "fastapi>=0.110.0",
    "langchain>=0.3.0",
    "langchain-deepseek>=0.1.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.29.0",
]
